--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             type="image/svg+xml"
             href="/src/assets/logo/newLogo.png"
         />
+        <!-- <meta accesskey="author" content="Meliboev Azimjon" /> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>NEURO.UZ</title>
     </head>
